finished mobile styling

--- a/index.html
+++ b/index.html
@@ -195,8 +195,10 @@
   </footer>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    <p class="attribution__designer"><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Designed By
+        Frontend Mentor</a></p>
+    <p class="attribution__programmer"><a href="https://github.com/mamba-dev-KE" target="_blank">Coded By Joseph
+        Maramba</a></p>
   </div>
 
 </body>
