desktop site responsiveness complete

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-      <div class="wrapper">
+      <div class="hero__wrapper">
         <h1 class="hero__title">We are creatives</h1>
         <img class="hero__arrow" src="./images/icon-arrow-down.svg" alt="">
       </div>
     </section>
 
     <!-- BRANDS SECTION -->
-    <section class="brands">
-      <div class="container brands__transform__row">
+    <section class="brands container">
+      <div class="brands__transform__row">
         <div class="brands__image column">
           <picture>
             <source media="(max-width: 757px)" srcset="./images/mobile/image-transform.jpg">
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="container brands__standout__row">
+      <div class="brands__standout__row">
         <div class="brands__image">
           <picture>
             <source media="(max-width: 757px)" srcset="./images/mobile/image-stand-out.jpg">
@@ -125,12 +125,13 @@
     </section>
 
     <!-- CLIENT TESTIMONIALS SECTION -->
-    <section class="testimonials">
-      <div class="container testimonials__row">
-        <h2 class="testimonials__title">Client Testimonials</h2>
+    <section class="testimonials container">
+      <h2 class="testimonials__title">Client Testimonials</h2>
+      <div class="testimonials__row">
         <div class="testimonials__card">
           <img class="testimonials__image" src="./images/image-emily.jpg" alt="Emily">
-          <p class="testimonials__para">We put our trust in Sunnyside and they delivered, making sure our needs were met
+          <p class="testimonials__para">We put our trust in Sunnyside and they delivered, making sure our needs were
+            met
             and deadlines were always hit.</p>
           <h3 class="testimonials__name">Emily R.</h3>
           <P class="testimonials__position">Marketing Director</P>
@@ -210,10 +211,10 @@
   </footer>
 
   <div class="attribution">
-    <p class="attribution__designer"><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Designed By
+    <p class="attribution__designer"><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Designed By:
         Frontend Mentor</a></p>
-    <p class="attribution__programmer"><a href="https://github.com/mamba-dev-KE" target="_blank">Coded By Joseph
-        Maramba</a></p>
+    <p class="attribution__programmer"><a href="https://github.com/mamba-dev-KE" target="_blank">Coded By: Joseph
+        Maramba 💻 🖥 </a></p>
   </div>
 
 </body>
