last commit for the day

--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
             <img src="./images/desktop/image-transform.jpg" alt="">
           </picture>
         </div>
-        <div class="brands__info column">
-          <h2 class="brands__title">Transform your brand</h2>
-          <p class="brands__para">We are a full-service creative agency specializing in helping brands grow fast. Engage
-            your
-            clients through compelling visuals that do most of the marketing for you.</p>
-          <button class="brands__btn"><a class="brands__link brands__link--yellow" href="#">Learn More</a></button>
+        <div class="brands__info">
+          <div class="brands__wrapper">
+            <h2 class="brands__title">Transform your brand</h2>
+            <p class="brands__para">We are a full-service creative agency specializing in helping brands grow fast.
+              Engage
+              your
+              clients through compelling visuals that do most of the marketing for you.</p>
+            <button class="brands__btn"><a class="brands__link brands__link--yellow" href="#">Learn More</a></button>
+          </div>
         </div>
       </div>
 
@@ -77,12 +80,15 @@
           </picture>
         </div>
         <div class="brands__info">
-          <h2 class="brands__title">Standout to the right audience</h2>
-          <p class="brands__para">Using a collaborative formula of designers, researchers, photographers, videographers,
-            and
-            copywriters, we’ll build and extend your brand in digital places.</p>
-          <button class="brands__btn"><a class="brands__link brands__link--redish" href="#">Learn
-              More</a></button>
+          <div class="brands__wrapper">
+            <h2 class="brands__title">Standout to the right audience</h2>
+            <p class="brands__para">Using a collaborative formula of designers, researchers, photographers,
+              videographers,
+              and
+              copywriters, we’ll build and extend your brand in digital places.</p>
+            <button class="brands__btn"><a class="brands__link brands__link--redish" href="#">Learn
+                More</a></button>
+          </div>
         </div>
       </div>
     </section>
